28716 add search template

--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -24,6 +24,7 @@
 @import 'partials/post-page-navigation';
 @import 'partials/promo-list';
 @import 'partials/promo-space';
+@import 'partials/search-list';
 @import 'partials/sidebar-gallery';
 @import 'partials/site-navigation';
 @import 'partials/site-sitebar';
