--- a/wp-content/themes/w4ptheme/scss/partials/_header.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_header.scss
@@ -4,7 +4,7 @@
 .siteHeader-inner {
     position: relative;
     overflow: hidden;
-    @include breakpoint(large) {
+    @include breakpoint(medium) {
         overflow: visible;
     }
     &::before {
@@ -55,7 +55,10 @@
     margin-right: 5px;
 }
 .siteHeader-mainNav {
-    display: inline-block;
+    display: none;
+    @include breakpoint(large) {
+        display: inline-block;
+    }
 }
 .siteHeader-widgets {
     position: relative;
@@ -98,14 +101,6 @@
             height: 50px;
             content: "";
             background-color: $white;
-        }
-    }
-    .siteHeader-inner {
-        &::before {
-            width: 200%;
-            @include breakpoint(medium) {
-                width: 760px;
-            }
         }
     }
 }
