28726 add styles for submit event form

--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -29,3 +29,4 @@
 @import 'partials/site-navigation';
 @import 'partials/site-sitebar';
 @import 'partials/social-list';
+@import 'partials/submit-form';
