--- a/wp-content/themes/w4ptheme/scss/partials/_forms.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_forms.scss
@@ -2,6 +2,7 @@ input[type="text"],
 input[type="email"],
 input[type="password"],
 input[type="search"],
+input[type="url"],
 textarea {
     width: 100%;
     padding: 7px 10px 8px;
@@ -24,6 +25,10 @@ textarea {
     &.wpcf7-not-valid {
         border-color: $red;
     }
+    &.is-inline {
+        width: auto;
+    }
+
 }
 textarea {
     resize: vertical;
@@ -113,6 +118,7 @@ input[type="submit"].btn-middleWidth,
         }
     }
     .selectboxit-text {
+        padding-right: 5px;
         font-style: italic;
     }
     .selectboxit {
@@ -178,6 +184,35 @@ input[type="submit"].btn-middleWidth,
             &:after {
                 display: none;
             }
+        }
+    }
+}
+
+// Time picker from submit Event form
+.time-picker {
+    position: absolute;
+    z-index: 99;
+    width: 140px;
+    height: 191px;
+    margin: 0;
+    background: $white;
+    border: 1px solid $gray-border;
+    color: $ocean;
+    overflow: auto;
+    box-shadow: 1px 1px 5px $black--40;
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    li {
+        cursor: pointer;
+        padding: 8px 20px;
+        white-space: nowrap;
+        transition: all .2s ease-out;
+        &.selected {
+            background: $ocean;
+            color: $white;
         }
     }
 }
