--- a/htdocs/wp-content/themes/w4ptheme/scss/application.scss
+++ b/htdocs/wp-content/themes/w4ptheme/scss/application.scss
@@ -30,3 +30,4 @@
 @import 'partials/site-sitebar';
 @import 'partials/social-list';
 @import 'partials/submit-form';
+@import 'partials/ui-autocomplete';
