--- a/htdocs/wp-content/themes/w4ptheme/scss/partials/_datepicker.scss
+++ b/htdocs/wp-content/themes/w4ptheme/scss/partials/_datepicker.scss
@@ -4,7 +4,7 @@
     width: 250px;
     padding: 0;
     background: $white;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4);
+    box-shadow: 1px 1px 5px $black--40;
     &.ui-widget-content {
         border: none;
     }
