--- a/htdocs/wp-content/themes/w4ptheme/scss/partials/_site-sitebar.scss
+++ b/htdocs/wp-content/themes/w4ptheme/scss/partials/_site-sitebar.scss
@@ -1,3 +1,8 @@
+.siteSidebar {
+    @include breakpoint(medium) {
+        float: right;
+    }
+}
 .siteSidebar-inner {
     @include breakpoint(medium) {
         float: right;
