--- a/htdocs/static-html/scss/setup/_colours.scss
+++ b/htdocs/static-html/scss/setup/_colours.scss
@@ -20,3 +20,4 @@ $sunshine: #ffca08;
 $white: #fff;
 $white--20: rgba(255,255,255,.2);
 $white--40: rgba(255,255,255,.4);
+$white--80: rgba(255,255,255,.8);
