--- a/htdocs/wp-content/themes/w4ptheme/scss/_global.scss
+++ b/htdocs/wp-content/themes/w4ptheme/scss/_global.scss
@@ -43,6 +43,7 @@ h2 {
     font-size: $fontSize-larger;
     font-weight: $fontWeight-bold;
     line-height: $lineHeight-tightest;
+    text-transform: uppercase;
 }
 h3 {
     margin: 0 0 .75em;
