29143 set h3 font size 1.2rem in all grid except blogLanding

--- a/htdocs/static-html/dev-html/partials/blog-landing-template.html
+++ b/htdocs/static-html/dev-html/partials/blog-landing-template.html
@@ -25,7 +25,7 @@
 
 
         <section class="row medium-collapse">
-            <div class="medium-10 large-12 column medium-centered">
+            <div class="medium-10 large-12 column medium-centered gridLanding">
 
                 <div class="row small-collapse">
                     <div class="medium-8 large-6 column">
