29189 Remove the border from the sidebar map

--- a/htdocs/static-html/scss/partials/_site-sitebar.scss
+++ b/htdocs/static-html/scss/partials/_site-sitebar.scss
@@ -21,4 +21,8 @@
 }
 .siteSidebar-item-mapHolder {
     margin-bottom: 10px;
+    .mapp-layout {
+        margin: 0;
+        border: none;
+    }
 }
