29148 made p in blue sidebar font-weight 500

--- a/htdocs/static-html/scss/partials/_site-sitebar.scss
+++ b/htdocs/static-html/scss/partials/_site-sitebar.scss
@@ -17,6 +17,9 @@
     border-bottom: none;
     background: url("../images/sky-background.jpg") $sky no-repeat 0 0;
     color: $white;
+    p {
+        font-weight: $fontWeight-normal;
+    }
 }
 .siteSidebar-item-mapHolder {
     margin-bottom: 10px;
