29148 Change all p.intro font-weight to 100 instead of 300

--- a/htdocs/static-html/scss/_global.scss
+++ b/htdocs/static-html/scss/_global.scss
@@ -54,6 +54,7 @@ h3 {
 .intro {
     margin: 1.2em 0;
     font-size: $fontSize-larger;
+    font-weight: $fontWeight-extraLighter;
     line-height: $lineHeight-tightest;
     color: $sky;
     &:last-child {
