--- a/htdocs/wp-content/themes/w4ptheme/scss/setup/_type.scss
+++ b/htdocs/wp-content/themes/w4ptheme/scss/setup/_type.scss
@@ -9,6 +9,7 @@ $fontSize-large: 1.2rem;
 $fontSize-larger: 1.75rem;
 $fontSize-largest: 3rem;
 
+$fontWeight-extraLighter: 100;
 $fontWeight-extraLight: 200;
 $fontWeight-light: 300;
 $fontWeight-normal: 500;
