29146 make the title of the post a link

--- a/htdocs/static-html/dev-html/partials/blog-post-template.html
+++ b/htdocs/static-html/dev-html/partials/blog-post-template.html
@@ -65,7 +65,7 @@
                         <span class="postsList-item-categoryDecor" style="background-color: #0177c1"></span>
                     </div>
                     <div class="postsList-item-body">
-                        <h3>Opera Made NEW</h3>
+                        <h3><a href="#">Opera Made NEW</a></h3>
                         <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight...</p>
                         <p><i>BY AUTHOR NAME | <a href="#">CATEGORY</a></i></p>
                     </div>
@@ -82,7 +82,7 @@
                         <span class="postsList-item-categoryDecor" style="background-color: #f7941d"></span>
                     </div>
                     <div class="postsList-item-body">
-                        <h3>Opera Made NEW</h3>
+                        <h3><a href="#">Opera Made NEW</a></h3>
                         <p>Body font is set to 16px pragmatica-web. Body font is set to 16px pragmatica-web...</p>
                         <div class="postsList-item-info">BY AUTHOR NAME | <a href="#">CATEGORY</a></div>
                     </div>
