--- a/htdocs/wp-content/themes/w4ptheme/scss/partials/_post-list.scss
+++ b/htdocs/wp-content/themes/w4ptheme/scss/partials/_post-list.scss
@@ -1,6 +1,14 @@
 .postsList {
     h3 {
         text-transform: uppercase;
+        a {
+            color: $black;
+            transition: all .2s ease-out;
+            &:hover {
+                color: $ocean;
+                text-decoration: none;
+            }
+        }
     }
 }
 .postsList-item {
