--- a/htdocs/static-html/dev-html/partials/index-page-template.html
+++ b/htdocs/static-html/dev-html/partials/index-page-template.html
@@ -107,7 +107,7 @@
             <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight.<br></p>
         </div>
     </div>
-    <div class="row expanded small-collapse small-up-1 medium-up-3 xlarge-up-4 xxlarge-up-5 entityGrid">
+    <div class="row expanded small-collapse small-up-1 halfMedium-up-2 medium-up-3 xlarge-up-4 xxlarge-up-5 entityGrid">
         <div class="column">
             <div class="gridItem gridItem--blog">
                 <a href="#" class="js-touchFocus">
