29139 fix Art community text aligment

--- a/htdocs/static-html/scss/partials/_community-section.scss
+++ b/htdocs/static-html/scss/partials/_community-section.scss
@@ -33,6 +33,9 @@
     white-space: nowrap;
     transform-origin: 0 0;
     transform: rotate(90deg);
+    @include breakpoint(medium) {
+        left: 60px;
+    }
 }
 .communitySection-link-imgLayer {
     position: absolute;
