--- a/htdocs/wp-content/themes/w4ptheme/scss/_wp-core.scss
+++ b/htdocs/wp-content/themes/w4ptheme/scss/_wp-core.scss
@@ -71,3 +71,7 @@ a img.aligncenter {
     width: 1px;
     overflow: hidden;
 }
+/*wp-content images reset*/
+.postPage-content .wp-caption {
+    max-width: 100%;
+}
