29337 added lightbox caption styles

--- a/htdocs/static-html/scss/application.scss
+++ b/htdocs/static-html/scss/application.scss
@@ -30,5 +30,6 @@
 @import 'partials/site-sitebar';
 @import 'partials/social-list';
 @import 'partials/submit-form';
+@import 'partials/swipe-box-styles';
 @import 'partials/ui-autocomplete';
 
