--- a/htdocs/wp-content/themes/w4ptheme/scss/application.scss
+++ b/htdocs/wp-content/themes/w4ptheme/scss/application.scss
@@ -30,5 +30,6 @@
 @import 'partials/site-sitebar';
 @import 'partials/social-list';
 @import 'partials/submit-form';
+@import 'partials/swipe-box-styles';
 @import 'partials/ui-autocomplete';
 
