--- a/htdocs/wp-content/themes/w4ptheme/scss/setup/_colours.scss
+++ b/htdocs/wp-content/themes/w4ptheme/scss/setup/_colours.scss
@@ -2,6 +2,7 @@
 $black: #000;
 $black--20: rgba(0,0,0,.2);
 $black--40: rgba(0,0,0,.4);
+$black--70: rgba(0,0,0,.7);
 $charcoal: #585858;
 $charcoal--light: #a4a4a4;
 $gray: #e5e5e5;
