--- a/htdocs/wp-content/themes/w4ptheme/scss/setup/_variables.scss
+++ b/htdocs/wp-content/themes/w4ptheme/scss/setup/_variables.scss
@@ -2,5 +2,6 @@ $fontSize-navigation: 0.88rem;
 $fontSize-communitySmall: 2rem;
 $fontSize-communityMedium: 2.62rem;
 $fontSize-communityLarge: 2.87rem;
+$fontSize-caption: 0.875em;
 
 $gray-border: #d4d4d4;
